fix: adjust cta link contrast

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -11,9 +11,6 @@
 
   --color-button: var(--button);
   --color-button-active: var(--button-active);
-
-  --color-gradient-start: #fb5246;
-  --color-gradient-end: #ff9068;
 }
 
 @theme {
